# image

./: .gitignore  README  README.md  bun.lockb  eslint.config.mjs  nuxt.config.ts  package.json
.github/workflows/: ci.yml  publish.yml
.playground/: app.vue  nuxt.config.ts
.playground/pages/: compress.vue  convert.vue  metadata.vue  resize.vue
components/: ComparisonTool.vue  CompressionSettings.vue  Compressor.vue  Converter.vue  Metadata.vue  Resizer.vue  Viewer.vue  WorkerProgress.vue
composables/: useFormats.ts
utils/: dimensions.ts  file_types.ts  image_action_callback.ts  run_worker.ts
wasm/: Cargo.toml  LICENSE  README.md  README_JS.md  rename-package.sh
wasm/scripts/: adjust-npm-pkg.ts  build.ts
wasm/src/: convert.rs  error.rs  lib.rs  load.rs  metadata.rs  progress.rs  resize.rs  source_type.rs  view.rs
wasm/src/convert/: settings.rs  svg.rs
wasm/src/metadata/: editable.rs  extract.rs  mod.rs  presets.rs  save.rs
workers/: convert.d.ts  convert.ts  create_worker.ts  metadata.d.ts  metadata.ts  resize.d.ts  resize.ts  save_metadata.d.ts  save_metadata.ts  shared_types.ts
